# hoarder

./: .gitignore  Cargo.toml  client_test.fish
db/devdb/: docker-compose.yml
db/devdb/values/: 1001_enter_dev_user.sql
db/migrations/: 0001_users_table.sql
src/: app.rs  lib.rs  main.rs  routes.rs  utils.rs
src/routes/: users.rs
