[package]
name = "hoarder" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Konrad Kine <hello@surrphy.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
